Multiple Superclasses Are Not Mapped To Multiple allOf If Used In Different Services. Fixes #2601.